Bug 1780547 - Reduce the length of time the gecko profiler is suppressed for while collecting the nursery r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D153222